# text2sql

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.test.yml  docker-compose.yml  generate_embeddings.py  manage.sh  obzor.html  pipeline.html  pyproject.toml  run.py  setup_metadata.sql  setup_postgres.sql  setup_sample_db.sql  start.sh  stop.sh  test_api.py
bench/: README.md  audit_regressions.py  bird_baseline.py  bird_loader.py  bird_runner.py  forensics.py  queries.py  run_bench.py
bench/bird_data/: mini_dev_postgresql.json
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: 01-initial-render.spec.ts  02-connection-crud.spec.ts  03-schema-browser.spec.ts  04-sql-replay.spec.ts  05-llm-flow.spec.ts  helpers.ts
frontend/src/: App.tsx  index.css
notebooks/: create_desc_columns.ipynb
scripts/: setup_test_db.sql
src/: main.py
src/agents/: agent.py  columns_analyzer.py  services.py  states.py  table_relationships.py
src/api/: __init__.py  health.py  messages.py  mock.py  schema.py  sql.py  websocket.py
src/common/: credentials.py  dto.py  error_handler.py  exceptions.py  logger.py  metadata_db.py  settings.py
src/llm/: __init__.py  base.py  factory.py  utils.py
src/services/: __init__.py  connection_service.py  embedding_service.py  scanner_service.py  scheduler_service.py
tests/: conftest.py
tests/api/: test_schema.py
tests/common/: test_credentials.py
(+60 files in other folders)
