[project]
name = "text2sql-be"
version = "0.1.0"
description = "Natural language to SQL API backend"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=44.0.0",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-oci>=0.1.5",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.6.7",
    "litestar>=2.17.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.43",
    "sqlparse>=0.5.3",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
    "apscheduler>=3.11.0",
    "websockets>=12.0",
    "sqlglot>=28.6.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.2",
    "pyright>=1.1.396",
    "pyarrow>=24.0.0",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
